src/objects/Courier_Request__c.object
<CustomObject>
    <description>Object used to track Courier Requests as part of the Leasing module.</description>
    <fields>
        <fullName>AXS_Request_Id__c</fullName>
        <externalId>true</externalId>
        <label>AXS Request Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Num__c</fullName>
        <label>Agreement#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airway_Bill_Number__c</fullName>
        <label>Airway Bill Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <label>Building Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Location__c</fullName>
        <label>Delivery Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Zone__c</fullName>
        <label>Delivery Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>DI</fullName>
                </value>
                <value>
                    <fullName>DIAC</fullName>
                </value>
                <value>
                    <fullName>DIC</fullName>
                </value>
                <value>
                    <fullName>DKP</fullName>
                </value>
                <value>
                    <fullName>DMC</fullName>
                </value>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>DPC</fullName>
                </value>
                <value>
                    <fullName>DSC</fullName>
                </value>
                <value>
                    <fullName>DSP</fullName>
                </value>
                <value>
                    <fullName>In5</fullName>
                </value>
                <value>
                    <fullName>TECOM</fullName>
                </value>
                <value>
                    <fullName>IMPZ</fullName>
                </value>
                <value>
                    <fullName>DOZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lease Document Delivery</fullName>
                </value>
                <value>
                    <fullName>Executed Lease Documents Delivery</fullName>
                </value>
                <value>
                    <fullName>Lease Document Collection (Along with Cheque)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Empost_Sticker__c</fullName>
        <formula>HYPERLINK( $Label.AXS_Empost_Sticker_URL + AXS_Request_Id__c , &quot;Empost Sticker&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Empost Sticker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelope_Sticker__c</fullName>
        <formula>HYPERLINK( $Label.AXS_Envelope_Sticker_URL + AXS_Request_Id__c , &quot;Envelope Sticker&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Envelope Sticker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Message__c</fullName>
        <label>Integration Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Updated_On__c</fullName>
        <label>Last Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Cheques__c</fullName>
        <label>Number Of Cheques</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oracle_Party_ID__c</fullName>
        <label>Oracle Party ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Mobile__c</fullName>
        <label>Reference Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Request_Number__c</fullName>
        <externalId>true</externalId>
        <label>Service Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>at dispatcher</fullName>
                </value>
                <value>
                    <fullName>At Hub</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery</fullName>
                </value>
                <value>
                    <fullName>Out for Collection</fullName>
                </value>
                <value>
                    <fullName>Return to Sender</fullName>
                </value>
                <value>
                    <fullName>Allotted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Courier Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Request_Number__c</columns>
        <columns>Airway_Bill_Number__c</columns>
        <columns>Agreement_Num__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRN-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courier Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>